turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: type mismatch;
 found   : Unit
 required: Array[Array[Array[Int]]]
  rule = initLangton("RLRLRLRL")
                    ^